--- a/yoya.html
+++ b/yoya.html
@@ -3,16 +3,18 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   p {
     margin: 0 0;
     position: absolute;
-    font: 16px Verdana;
+    font-size: 2em;
     color: #eee;
-    height: 25px;
-    top: calc(100vh - 30px);
-    text-shadow: 0 0 2px white;
+    height: 5vh;
+    bottom: 0;
+    text-shadow: 0 0 0.5em white;
   }
 
   p a {
@@ -21,17 +23,29 @@
   }
 
   span {
-    font-size: 11px;
+    font-size: 0.8em;
   }
 
   p>a:first-of-type {
-    font-size: 20px;
+    font-size: 3em;
   }
 
   body {
     overflow: hidden;
   }
+
+  @media screen and (max-width: 768px) {
+    p {
+      font-size: 1.5em;
+      height: 10vh;
+    }
+
+    p>a:first-of-type {
+      font-size: 2em;
+    }
+  }
 </style>
+
 
 <canvas id=c></canvas>
 
